--- a/index.html
+++ b/index.html
@@ -270,6 +270,19 @@
           </div>
         </div>
       </section>
+      <!-- Our Work Progress Section  -->
+      <section class="my-24">
+        <!-- Title text  -->
+        <div>
+          <h1>Our Works Process</h1>
+          <p>
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+        </div>
+        <!-- Card Content  -->
+        <div></div>
+      </section>
     </main>
     <!-- Footer Section  -->
     <footer></footer>
