--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
   <body class="font-manrope">
     <!-- Header Section  -->
     <header class="bg-neutral-100 pb-10">
-      <div class="container mx-auto">
+      <div class="container justify-between lg:mx-auto">
         <nav class="mb-4">
         <div class="navbar">
           <div class="navbar-start">
-            <div class="dropdown">
+            <div class="dropdown order-2 ml-24">
               <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -89,7 +89,7 @@
               </div>
               <ul
                 tabindex="0"
-                class="menu menu-md dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+                class="menu menu-md dropdown-content bg-base-100 rounded-box mt-3 p-2 shadow"
               >
                 <li class="font-bold"><a>Home</a></li>
                 <li><a>Services</a></li>
