--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 </p>
                 <div class="space-y-5">
                   <div
-                    class="card card-side bg-base-100 shadow-xl border bg-white"
+                    class="card card-side bg-base-100 pl-5 shadow-xl border bg-white"
                   >
                     <figure>
                       <img src="./image/residential.png" alt="" />
@@ -265,7 +265,7 @@
                     </div shadow-xl>
                   </div>
                   <div
-                    class="card card-side bg-base-100 shadow-xl border bg-white"
+                    class="card card-side bg-base-100 pl-5 shadow-xl border bg-white"
                   >
                     <figure>
                       <img src="./image/commercial.png" alt="" />
@@ -290,7 +290,7 @@
         <div class="container mx-auto">
           <!-- Button Title text  -->
         <div>
-          <button class="btn ml-36 lg:ml-[570px] mb-5">
+          <button class="btn ml-32 lg:ml-[700px] mb-5">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -305,7 +305,7 @@
                 d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
               />
             </svg>
-            About Us
+            How We Works
           </button>
         </div>
         <div class="text-center">
@@ -367,12 +367,45 @@
         </div>
         </div>
       </section>
+      <!-- Challenge Section  -->
+       <section class="bg-neutral-50 py-10 container mx-auto">
+          <!-- Button and Text content  -->
+          <button class="btn bg-primary-bg-2 ml-[100px] lg:ml-[670px] mb-5">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+            Explore our Latest works
+          </button>
+        <div class="text-center">
+          <h1 class="text-2xl lg:text-4xl font-extrabold mb-4">
+            Our Latest Portfolio
+          </h1>
+          <p>
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, <br />
+            featuring weathered wood, sleek metal accents.
+          </p>
+        </div>
+      <!-- Card Section  -->
+
+    </section>
       <!-- Discuss Section  -->
       <section class="background-img py-1">
        <div class="container mx-auto my-24">
          <!-- Button and Title text  -->
         <div>
-          <button class="btn bg-primary-bg-2 ml-36 lg:ml-[570px] mb-5">
+          <button class="btn bg-primary-bg-2 ml-[135px] lg:ml-[700px] mb-5">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -427,7 +460,7 @@
             />
           </div>
           <div class="container my-10 mx-auto">
-            <textarea class="h-[200px] min-w-[350px] lg:w-[960px] bg-slate-100 rounded-xl p-4" placeholder="Write Your Message Here" name="text" id=""></textarea>
+            <textarea class="h-[200px] w-[350px] lg:w-[1210px] mx-auto bg-slate-100 rounded-xl p-4" placeholder="Write Your Message Here" name="text" id=""></textarea>
           </div>
           <!-- Button  -->
            <a class="w-full font-bold btn bg-primary-bg rounded-3xl"
