--- a/index.html
+++ b/index.html
@@ -398,6 +398,9 @@
           </p>
         </div>
       <!-- Card Section  -->
+       <div>
+
+       </div>
 
     </section>
       <!-- Discuss Section  -->
