--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
               class="rounded-full bg-slate-100 input input-bordered shadow-xl"
             />
           </div>
-          <div class="container my-10 mx-auto">
-            <textarea class="h-[200px] w-[350px] lg:w-[1210px] mx-auto bg-slate-100 rounded-xl p-4" placeholder="Write Your Message Here" name="text" id=""></textarea>
+          <div class="container my-10">
+            <textarea class="h-[200px] w-[350px] lg:w-[100%] mx-auto bg-slate-100 rounded-xl p-4" placeholder="Write Your Message Here" name="text" id=""></textarea>
           </div>
           <!-- Button  -->
            <a class="w-full font-bold btn bg-primary-bg rounded-3xl"
