--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         </div>
       </section>
       <!-- Challenge Section  -->
-       <section class="bg-neutral-50 py-10 container mx-auto">
+       <section class="py-10 container mx-auto">
           <!-- Button and Text content  -->
           <button class="btn bg-primary-bg-2 ml-[100px] lg:ml-[670px] mb-5">
             <svg
@@ -398,9 +398,69 @@
           </p>
         </div>
       <!-- Card Section  -->
-       <div>
-
+        <!-- <div class="my-10 border border-red-700"> -->
+          <!-- <div class="grid grid-cols-2 gap-10">
+          <div>
+             <div class="border rounded-xl p-5 flex gap-5 bg-base-100 h-[220px]">
+          <img src="./image/img1.png" alt="">
+          <div class="mr-5 py-4">
+            <h1 class="mb-3 text-2xl font-bold">Commercial</h1>
+             <p >The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+          <div class="my-4">
+            <a class="font-extrabold  bg-base-100"
+              >View Details
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6 p-1 inline-flex text-black rounded-full items-center justify-center bg-primary-bg"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+                />
+               </svg>
+              </a>
+            </div>
+           </div>
+          </div>
+          </div>
+           <img class="p-5 rounded-xl border bg-base-100" src="./image/img2.png" alt="">
+        </div> -->
+        <!-- <div class="gap-10 ml-52 grid grid-cols-2">
+        <div class="hero bg-base-100 border rounded-xl">
+        <div class="hero-content flex-col lg:flex-row">
+        <img src="./image/img1.png"/>
+         <div>
+          <h1 class="text-xl font-extrabold">Commercial</h1>
+          <p class="py-6">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+           <a class="font-extrabold  bg-base-100"
+              >View Details
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6 p-1 inline-flex text-black rounded-full items-center justify-center bg-primary-bg"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+                />
+               </svg>
+           </a>
+          </div>
+         </div>
+        </div>
+        <img class="p-5 border rounded-xl" src="./image/img2.png" alt="">
        </div>
+      </div> -->
+       
 
     </section>
       <!-- Discuss Section  -->
